# plex_linter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  config.template.toml  config_sample.json  plex_linter.config.template.toml  plex_linter.py  pyproject.toml  requirements.txt
plex_linter/: _utils.py  config.py  non_empty_string_prompt.py  plex_linter.py
